test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-rule/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ns.yaml
assert:
- cloned.yaml
