test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-rule/04-delete-rule.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- delete-rule.yaml
assert:
- policy-ready.yaml
