test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-rule/06-checks.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
assert:
- secret.yaml
error:
- configmap.yaml
