test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-rule/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-kafka-cm
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
